@@ -1,3 +1,9 @@
+2000-04-13  Eli Zaretskii  <eliz@is.elta.co.il>
+
+	* infrun.c (proceed, normal_stop): Change the error message about
+	failure to insert breakpoints/watchpoints so that it makes sense
+	even if ptrace is not used or no other processes can be active.
+
 Thu Apr 13 13:24:27 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* configure.in: Add --enable-maintainer-mode.
